Fix remaining low/medium priority bugs from full codebase audit
Python:
- accuracy_tracker: wrap record_result/show_report in try/finally (conn leak fix)
- accuracy_tracker: fix top5_hit set on all rows → only predictedRank<=5 rows
- accuracy_tracker: fix DISTINCT ON query to return 10 most recent races by date (subquery)
- high_dividend_selector: add JPEG magic byte check before saving images
- predictor: wrap main conn in try/finally to prevent leak on exception
- scraper: wrap main conn in try/finally to prevent leak on exception
- result_auto_fetcher: wrap main conn in try/finally to prevent leak on exception
- paddock_analyzer: wrap conn in try/finally to prevent leak on exception
- race_name_reconciler: wrap conn in try/finally to prevent leak on exception
- stats_predictor: remove hardcoded "稍重（雨）" track condition printout

Java:
- PredictionController: replace deprecated URLEncoder.encode(String,String) with StandardCharsets overload
- CalendarController: fix N+1 query — load entry counts in single query via countEntriesByRaceName()
- RaceEntryRepository: add countEntriesByRaceName() JPQL query

Templates:
- entry/index.html: fix selectedRace != '' fails when null → use #strings.isEmpty() check

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>